# toaster9000

./: ArduinoSystem.cmake  BoardOptions.cmake  BoardOptions.cmake.bak  CMakeCache.txt  CMakeLists.txt  ExecuteRecipe.cmake  FirmwareSizePrint.cmake  FirmwareUpload.cmake  IMPORTANT PIN ON ARDUINO.txt  Makefile  cmake_install.cmake  compile_commands.json  toaster.cpp  toaster.hex  toaster.ino  upload.sh
